/*
 * Copyright (c) 2025 Huawei Technologies Co., Ltd.
 * openFuyao is licensed under Mulan PSL v2.
 * You can use this software according to the terms and conditions of the Mulan PSL v2.
 * You may obtain a copy of Mulan PSL v2 at:
 *          http://license.coscl.org.cn/MulanPSL2
 * THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND,
 * EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT,
 * MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
 * See the Mulan PSL v2 for more details.
 */

syntax = "proto3";

package helmchart;

option go_package = "/home/xzy/remote/marketplace-service/pkg/rpc/";

service ChartManager {
  rpc GetHelmChart(ChartRequest) returns (stream ChartResponse);
}

message ChartRequest {
  int32 targetSystem = 1;
  string repoName = 2;
  string chartName = 3;
  string chartVersion = 4;
}

message ChartResponse {
  bool success = 1;
  bytes chartBytes = 2;
}
